[gd_scene load_steps=11 format=2]

[ext_resource path="res://Placeholder Textures for Shards of the Past/character_soldier_walk/soldierwalksprite_0.png" type="Texture" id=1]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_soldier_walk/soldierwalksprite_1.png" type="Texture" id=2]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_soldier_walk/soldierwalksprite_2.png" type="Texture" id=3]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_soldier_walk/soldierwalksprite_3.png" type="Texture" id=4]
[ext_resource path="res://SoldierEnemy.gd" type="Script" id=5]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_soldier_shoot/soldiershootsprite_1.png" type="Texture" id=6]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_soldier_shoot/soldiershootsprite_0.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 11 )

[sub_resource type="CircleShape2D" id=3]
radius = 120.004

[node name="SoldierEnemy" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1 )
frames = SubResource( 1 )
animation = "attack"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 6, 0 )
enabled = true
cast_to = Vector2( 0, 12.3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 13, 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.75

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
